fix: Use TS visibility function instead of CSS. Add few SVG logo for the footer.

--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -25,8 +25,6 @@ section {
 }
 
 #about {
-  visibility: hidden;
-  display: none;
 }
 
 #projects {
@@ -41,6 +39,4 @@ section {
 }
 
 #contact {
-  visibility: hidden;
-  display: none;
 }
